@@ -1,0 +1,24 @@
+/*
+ *  This test file is used to verify that the header files associated with
+ *  invoking this function are correct.
+ *
+ *  COPYRIGHT (c) 1989-2003.
+ *  On-Line Applications Research Corporation (OAR).
+ *
+ *  The license and distribution terms for this file may be
+ *  found in the file LICENSE in this distribution or at
+ *  http://www.OARcorp.com/rtems/license.html.
+ *
+ *  $Id$
+ */
+
+#include <unistd.h>
+ 
+void test( void )
+{
+  unsigned long usec; 
+  unsigned      result;
+
+  usec = 0;
+  result = usleep( usec );
+}
